--- a/photogrammetry/ipWebcamTest.ipynb
+++ b/photogrammetry/ipWebcamTest.ipynb
@@ -44,15 +44,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# FLAG FOR SAVING VIDEO FILE\n",
     "saveFlag = True\n",
     "\n",
-    "recordingTimeSeconds = 10\n",
+    "# TIMES IN SECONDS\n",
+    "recordingTimeSeconds = 60\n",
     "beginWarningSeconds = 5\n",
+    "reminderBeepSeconds = 10\n",
+    "\n",
+    "outputAVIPath = '/Users/mettinger/Data/photogrammetry/output.avi'\n",
     "\n",
     "# FPS FOR SAVED FILE\n",
     "recordedFPS = 10"
@@ -77,7 +81,7 @@
     "\n",
     "# Define the codec and create VideoWriter object.The output is stored in 'outpy.avi' file.\n",
     "if saveFlag:\n",
-    "    out = cv2.VideoWriter('output.avi',\n",
+    "    out = cv2.VideoWriter(outputAVIPath,\n",
     "                          cv2.VideoWriter_fourcc('M','J','P','G'), \n",
     "                          fps=recordedFPS, \n",
     "                          frameSize=(frame_width,frame_height))\n",
@@ -119,12 +123,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Function to extract frames \n",
-    "def frameCapture(path, recordedFPS, extractedFPS, saveFlag, beginSkipSeconds, endSecond): \n",
+    "def frameCapture(path, recordedFPS, extractedFPS, saveFlag, beginSkipSeconds, endSecond, outputDirectory): \n",
     "      \n",
     "    frameList = []\n",
     "    \n",
@@ -148,7 +152,7 @@
     "        if count % freq == 0 and (count / recordedFPS) >= beginSkipSeconds and (count / recordedFPS) <= endSecond:\n",
     "            # Saves the frames with frame-count \n",
     "            if saveFlag:\n",
-    "                cv2.imwrite(\"frame%d.jpg\" % count, image) \n",
+    "                cv2.imwrite(outputDirectory + \"/frame%d.jpg\" % count, image) \n",
     "            frameList.append(image)\n",
     "  \n",
     "        count += 1\n",
@@ -164,13 +168,15 @@
     "# SET EXTRACTION FPS\n",
     "extractedFPS = 1\n",
     "inputAVIPath = '/Users/mettinger/github/python/photogrammetry/output.avi'\n",
+    "outputDirectory = '/Users/mettinger/Data/photogrammetry/photoSampleOne/'\n",
     "\n",
     "frameList = frameCapture(inputAVIPath, \n",
     "                         recordedFPS=recordedFPS, \n",
     "                         extractedFPS=extractedFPS, \n",
     "                         saveFlag=True, \n",
     "                         beginSkipSeconds=1, \n",
-    "                         endSecond=6)"
+    "                         endSecond=6, \n",
+    "                         outputDirectory)"
    ]
   },
   {
