--- a/photogrammetry/ipWebcamTest.ipynb
+++ b/photogrammetry/ipWebcamTest.ipynb
@@ -2,20 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "\n",
@@ -32,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,11 +41,11 @@
     "saveFlag = True\n",
     "\n",
     "# TIMES IN SECONDS\n",
-    "recordingTimeSeconds = 60\n",
-    "beginWarningSeconds = 5\n",
-    "reminderBeepSeconds = 10\n",
+    "recordingTimeSeconds = 10\n",
+    "beginWarningSeconds = 2\n",
+    "reminderBeepSeconds = 0\n",
     "\n",
-    "outputAVIPath = '/Users/mettinger/Data/photogrammetry/output.avi'\n",
+    "aviPath = '/Users/mettinger/Data/photogrammetry/output.avi'\n",
     "\n",
     "# FPS FOR SAVED FILE\n",
     "recordedFPS = 10"
@@ -81,7 +70,7 @@
     "\n",
     "# Define the codec and create VideoWriter object.The output is stored in 'outpy.avi' file.\n",
     "if saveFlag:\n",
-    "    out = cv2.VideoWriter(outputAVIPath,\n",
+    "    out = cv2.VideoWriter(aviPath,\n",
     "                          cv2.VideoWriter_fourcc('M','J','P','G'), \n",
     "                          fps=recordedFPS, \n",
     "                          frameSize=(frame_width,frame_height))\n",
@@ -123,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,22 +150,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# SET EXTRACTION FPS\n",
     "extractedFPS = 1\n",
-    "inputAVIPath = '/Users/mettinger/github/python/photogrammetry/output.avi'\n",
     "outputDirectory = '/Users/mettinger/Data/photogrammetry/photoSampleOne/'\n",
     "\n",
-    "frameList = frameCapture(inputAVIPath, \n",
+    "frameList = frameCapture(aviPath, \n",
     "                         recordedFPS=recordedFPS, \n",
     "                         extractedFPS=extractedFPS, \n",
     "                         saveFlag=True, \n",
     "                         beginSkipSeconds=1, \n",
     "                         endSecond=6, \n",
-    "                         outputDirectory)"
+    "                         outputDirectory=outputDirectory)"
    ]
   },
   {
