--- a/scratch_mac.ipynb
+++ b/scratch_mac.ipynb
@@ -1020,6 +1020,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def temp():\n",
+    "    print(\"hello\")\n",
+    "    z = 5\n",
+    "    print(\"dd\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -1046,5 +1058,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
