--- a/rockartproject/docxTest.ipynb
+++ b/rockartproject/docxTest.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from docx import Document\n",
+    "from docx.shared import Inches\n",
     "import glob"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +31,7 @@
     "    document = Document(templatePath)\n",
     "\n",
     "    p = document.paragraphs[0]\n",
-    "    p.insert_paragraph_before(imageName[0:-5]).add_run().add_picture(imagePath)\n",
+    "    p.insert_paragraph_before(imageName[0:-5]).add_run().add_picture(imagePath, width=Inches(6.0))\n",
     "\n",
     "    document.paragraphs[1].add_run(formalName)\n",
     "    document.paragraphs[2].add_run(accessionNumber)\n",
@@ -47,16 +48,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[None, None, None, None, None, None, None]"
+       "[None]"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,9 +84,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.3 64-bit ('base': conda)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python37364bitbasecondae85c44cab95f4015a8bcd7aebb80cc75"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -97,7 +98,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
