--- a/rockartproject/scanProcess.ipynb
+++ b/rockartproject/scanProcess.ipynb
@@ -63,6 +63,8 @@
     }
    ],
    "source": [
+    "# 1200 pixels per inch\n",
+    "\n",
     "photoDirectory = '/Users/mettinger/Desktop/rockArtPhotos/rockartPhotosAndDocs/photos/'\n",
     "docxDirectory = '/Users/mettinger/Desktop/rockArtPhotos/rockartPhotosAndDocs/doc/'\n",
     "\n",
