--- a/eeg/kuramoto.ipynb
+++ b/eeg/kuramoto.ipynb
@@ -182,14 +182,17 @@
     "            self.update_noise_params(dt)\n",
     "\n",
     "        kODE = ode(self.kuramoto_ODE, jac=self.kuramoto_ODE_jac)\n",
-    "        kODE.set_integrator(\"dopri5\")\n",
-    "\n",
+    "        #kODE.set_integrator(\"dopri5\", nsteps=20000)\n",
+    "        kODE.set_integrator(\"lsoda\", nsteps=20000)\n",
+    "        \n",
     "        # Set parameters into model\n",
     "        kODE.set_initial_value(self.init_phase, t[0])\n",
     "        \n",
     "        if isinstance(self.K, np.ndarray):\n",
     "            kODE.set_f_params((self.W, self.K))\n",
     "            kODE.set_jac_params((self.W, self.K))\n",
+    "        elif isinstance(self.K, types.GeneratorType):\n",
+    "            throwAwayFirst = next(self.K)\n",
     "\n",
     "        if self._noise != None:\n",
     "            self.update_noise_params(dt)\n",
@@ -198,6 +201,8 @@
     "        \n",
     "        # Run ODE integrator\n",
     "        for idx, _t in enumerate(t[1:]):\n",
+    "            if idx % int(len(t)/20) == 0:\n",
+    "                print(idx)\n",
     "            if isinstance(self.K, list):\n",
     "                kODE.set_f_params((self.W, self.K[idx]))\n",
     "                kODE.set_jac_params((self.W, self.K[idx]))\n",
@@ -217,7 +222,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Function definitions"
+    "# Utility function definitions"
    ]
   },
   {
@@ -241,14 +246,12 @@
     "    A = np.resize(A, (1, len(A)))\n",
     "    return A.dot(np.sin(phiMatrix)).sum(0)\n",
     "\n",
-    "# make a list of coupling matrices that evolve piecewise linearly\n",
+    "# make a generator of coupling matrices that evolve piecewise linearly\n",
     "# KpointList is a list of coupling matrices\n",
     "# changePoints is a list of time points at which the corresponding matrices hold\n",
     "# In between the change points the matrices evolve linearly from first to second\n",
     "# dt is the time step\n",
-    "'''\n",
-    "def linearKList(KpointList, changePoints, dt):\n",
-    "    Klist = []\n",
+    "def linearKGenerator(KpointList, changePoints, dt):\n",
     "    for i in range(1,len(changePoints)):\n",
     "        thisList = []\n",
     "        startMatrix = KpointList[i-1]\n",
@@ -256,22 +259,8 @@
     "        numTimePoints = int(np.ceil((changePoints[i] - changePoints[i-1])/dt)) + 1\n",
     "        for j in np.linspace(0,1,numTimePoints)[0:-1]:\n",
     "            thisMatrix = ((1-j) * startMatrix) + (j * endMatrix)\n",
-    "            thisList.append(thisMatrix.copy())\n",
-    "        Klist.extend(thisList)\n",
-    "    Klist.append(endMatrix.copy())\n",
-    "    return Klist\n",
-    "'''\n",
-    "\n",
-    "def linearKList(KpointList, changePoints, dt):\n",
-    "    Klist = []\n",
-    "    for i in range(1,len(changePoints)):\n",
-    "        thisList = []\n",
-    "        startMatrix = KpointList[i-1]\n",
-    "        endMatrix = KpointList[i]\n",
-    "        numTimePoints = int(np.ceil((changePoints[i] - changePoints[i-1])/dt)) + 1\n",
-    "        for j in np.linspace(0,1,numTimePoints)[0:-1]:\n",
-    "            thisMatrix = ((1-j) * startMatrix) + (j * endMatrix)\n",
-    "            yield thisMatrix"
+    "            yield thisMatrix\n",
+    "    yield endMatrix"
    ]
   },
   {
@@ -301,7 +290,7 @@
    "outputs": [],
    "source": [
     "# set these simulation parameters\n",
-    "nOsc = 20\n",
+    "nOsc = 200\n",
     "upperFreqBound = 10.0\n",
     "upperTimeBound = 40\n",
     "dt = 0.01\n",
@@ -325,7 +314,7 @@
     "K1 = .001 * np.ones(shape=(nOsc,nOsc))\n",
     "K2 = 1 * np.ones(shape=(nOsc,nOsc))\n",
     "\n",
-    "K = linearKList([K1,K1,K2,K1,K1],[0.,15.,20.,25.,40.],dt)\n",
+    "K = linearKGenerator([K1,K1,K2,K1,K1],[0.,15.,20.,25.,40.],dt)\n",
     "\n",
     "# Passing parameters as a dictionary\n",
     "init_params = {'W':W, 'K':K, 'Y0':Y0}"
@@ -345,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "cell_id": "00004-f2d0e837-846f-4459-980f-9dced009de7b",
     "deepnote_cell_type": "code",
@@ -355,7 +344,37 @@
     "source_hash": "6eafe7ed",
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "200\n",
+      "400\n",
+      "600\n",
+      "800\n",
+      "1000\n",
+      "1200\n",
+      "1400\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-1577e5560ed4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Running Kuramoto model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mkuramoto\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mKuramoto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minit_params\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0modePhi\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mkuramoto\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msolve\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# Computing phase dynamics\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-2-e491d71bf135>\u001b[0m in \u001b[0;36msolve\u001b[0;34m(self, t)\u001b[0m\n\u001b[1;32m    170\u001b[0m                 \u001b[0mkODE\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_jac_params\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mW\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mthisK\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    171\u001b[0m             \u001b[0mphase\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0midx\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mkODE\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 172\u001b[0;31m             \u001b[0mkODE\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mintegrate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0m_t\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    173\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    174\u001b[0m         \u001b[0mphase\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mkODE\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/envs/mne/lib/python3.8/site-packages/scipy/integrate/_ode.py\u001b[0m in \u001b[0;36mintegrate\u001b[0;34m(self, t, step, relax)\u001b[0m\n\u001b[1;32m    431\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    432\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 433\u001b[0;31m             self._y, self.t = mth(self.f, self.jac or (lambda: None),\n\u001b[0m\u001b[1;32m    434\u001b[0m                                   \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_y\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mt\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    435\u001b[0m                                   self.f_params, self.jac_params)\n",
+      "\u001b[0;32m~/opt/anaconda3/envs/mne/lib/python3.8/site-packages/scipy/integrate/_ode.py\u001b[0m in \u001b[0;36mrun\u001b[0;34m(self, f, jac, y0, t0, t1, f_params, jac_params)\u001b[0m\n\u001b[1;32m   1344\u001b[0m         \u001b[0margs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mt0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mt1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcall_args\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m\\\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1345\u001b[0m                \u001b[0;34m[\u001b[0m\u001b[0mjac\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcall_args\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mf_params\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mjac_params\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1346\u001b[0;31m         \u001b[0my1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mistate\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrunner\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1347\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mistate\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mistate\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1348\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mistate\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-2-e491d71bf135>\u001b[0m in \u001b[0;36mkuramoto_ODE\u001b[0;34m(self, t, y, arg)\u001b[0m\n\u001b[1;32m    112\u001b[0m             \u001b[0mphase\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mn\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    113\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mm\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_k\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 114\u001b[0;31m             \u001b[0mphase\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0m_k\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mm\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mdy\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    115\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    116\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mphase\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "# Running Kuramoto model\n",
     "kuramoto = Kuramoto(init_params)\n",
@@ -482,7 +501,23 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "'''\n",
+    "def linearKList(KpointList, changePoints, dt):\n",
+    "    Klist = []\n",
+    "    for i in range(1,len(changePoints)):\n",
+    "        thisList = []\n",
+    "        startMatrix = KpointList[i-1]\n",
+    "        endMatrix = KpointList[i]\n",
+    "        numTimePoints = int(np.ceil((changePoints[i] - changePoints[i-1])/dt)) + 1\n",
+    "        for j in np.linspace(0,1,numTimePoints)[0:-1]:\n",
+    "            thisMatrix = ((1-j) * startMatrix) + (j * endMatrix)\n",
+    "            thisList.append(thisMatrix.copy())\n",
+    "        Klist.extend(thisList)\n",
+    "    Klist.append(endMatrix.copy())\n",
+    "    return Klist\n",
+    "'''"
+   ]
   }
  ],
  "metadata": {
