--- a/eeg/swissTemporalEEG.ipynb
+++ b/eeg/swissTemporalEEG.ipynb
@@ -10214,7 +10214,7 @@
    "outputs": [],
    "source": [
     "'''\n",
-    "from celluloid import Camera\n",
+    "from celluloid import Camer\n",
     "\n",
     "res = 64\n",
     "\n",
