--- a/eeg/temporalLandscape.ipynb
+++ b/eeg/temporalLandscape.ipynb
@@ -333,6 +333,10 @@
   }
  ],
  "metadata": {
+  "@webio": {
+   "lastCommId": null,
+   "lastKernelId": null
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
