--- a/dashTest/dashTest.ipynb
+++ b/dashTest/dashTest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,20 +66,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dash app running on http://127.0.0.1:8050/\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#app.run_server(host='0.0.0.0', port=8050)\n",
-    "app.run_server(mode='external')"
+    "app.run_server(mode='external', debug=True)"
    ]
   },
   {
