--- a/bonds/treasuries.ipynb
+++ b/bonds/treasuries.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "e2b3a4bd-7222-4318-ba19-9f20c8046388",
    "metadata": {},
    "outputs": [],
@@ -13,12 +13,13 @@
     "import pandas as pd\n",
     "import dtale\n",
     "import datetime\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import tabloo"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "id": "9d762195-7d04-47b9-b9a6-58caa034e40d",
    "metadata": {},
    "outputs": [
@@ -26,7 +27,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "525540\n"
+      "720049\n"
      ]
     }
    ],
@@ -45,47 +46,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "c4ca746e-7546-4d54-85ed-4c7cd547ae43",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"100%\"\n",
-       "            height=\"475\"\n",
-       "            src=\"http://DESKTOP-30JQB5F:40000/dtale/iframe/1\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "            \n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.IFrame at 0x23e2f8983d0>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": []
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "dtale.show(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "id": "764f21ef-7e4d-42c8-83a9-0b8382885b7f",
    "metadata": {},
    "outputs": [
@@ -95,7 +66,7 @@
        "['912796CR8']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,8 +162,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "id": "2c75bdf8-52ed-4fdf-9e70-b7fa87f9bf2f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp = {i:df[df['cusip'] == i]['date'].min() for i in set(df['cusip'])}"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "dd984b65-7c20-4872-986a-e182868ad648",
+   "id": "22ef70ab-3183-4602-b2c5-8b5926c79e51",
    "metadata": {},
    "outputs": [],
    "source": []
