--- a/bonds/webScraping.ipynb
+++ b/bonds/webScraping.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "fa763c6b-8a30-4d6e-a022-1c8b93e4ab17",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "fe5fa1e7-dd54-43ae-bb87-e98c765420c2",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "da8e2d15-4a87-4ab8-a6cd-0cc6613f2683",
    "metadata": {},
    "outputs": [
@@ -93,7 +93,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "days to get: 576\n",
+      "days to get: 600\n",
       "0\n",
       "100\n",
       "200\n",
@@ -104,18 +104,26 @@
     }
    ],
    "source": [
-    "dataList = refreshTreasuryData('9/17/2016', '9/17/2023', '../bonds/treasuries.pkl')"
+    "dataList = refreshTreasuryData('9/17/2014', '9/17/2023', '../bonds/treasuries.pkl')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "7ea1e1dc-a922-4260-bac2-bca8d1ca3141",
    "metadata": {},
    "outputs": [],
    "source": [
     "with open('../bonds/treasuries.pkl', 'wb') as f:\n",
     "  pickle.dump(dataList, f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "40d41780-7d7d-4e23-beff-34abf6d2a302",
+   "metadata": {},
+   "source": [
+    "# Scratch"
    ]
   },
   {
